--- a/config.yml
+++ b/config.yml
@@ -7,4 +7,4 @@ request:
 issues:
   repo: xaoxuu/friends # 仓库持有者/仓库名
   label: active # 筛选具有 active 标签的 issue ，取消此项则会提取所有 open 状态的 issue
-  sort: # updated-desc # 排序，按最近更新，取消此项则按创建时间排序
+  sort: updated-desc # 排序，按最近更新，取消此项则按创建时间排序
