--- a/.github/ISSUE_TEMPLATE/template_friend.yaml
+++ b/.github/ISSUE_TEMPLATE/template_friend.yaml
@@ -1,6 +1,6 @@
----
 name: 友链模板
 about: 自助添加友链。请遵守 JSON 格式，在双引号中填写。
+description: 自助添加友链。请遵守 JSON 格式，在双引号中填写。
 title:
 labels: ''
 body:
@@ -35,4 +35,3 @@ body:
       label: 我的友链仓库（可选）
       description: 如果您使用 issue 作为友链源，请附上 issue 仓库链接，否则请直接添加 xaoxuu.com 到您的友链中。
       placeholder: "如: https://github.com/xaoxuu/friends/"
----
