--- a/.github/ISSUE_TEMPLATE/template_friend.yaml
+++ b/.github/ISSUE_TEMPLATE/template_friend.yaml
@@ -1,8 +1,8 @@
 name: 友链模板
 about: 自助添加友链。请遵守 JSON 格式，在双引号中填写。
 description: 自助添加友链。请遵守 JSON 格式，在双引号中填写。
-title:
-labels: ''
+title: ''
+labels: []
 body:
   - type: input
     id: friends-html
