--- a/.github/ISSUE_TEMPLATE/template_friend.yaml
+++ b/.github/ISSUE_TEMPLATE/template_friend.yaml
@@ -16,7 +16,7 @@ body:
           label: 有独立域名，非免费域名。
         - required: true
           label: 博客已运行至少半年，非刚搭建好。
-        - required: true
+        - required: false
           label: 与 xaoxuu 有至少 5 次有效互动（有内容的留言或者 issue 等）。
   - type: textarea
     id: config-file
