--- a/.github/configs/label-commenter-config.yml
+++ b/.github/configs/label-commenter-config.yml
@@ -7,7 +7,7 @@ labels:
         body: |
           **🎉 恭喜，友链添加成功！**
 
-          稍后片刻刷新 [网页](https://xaoxuu.com) 就可以看到您的链接。
+          稍后片刻刷新 [网页](https://xaoxuu.com/friends/) 就可以看到您的链接。
 
           > 如果您的站点信息发生了变动，请直接修改这个 issue 的内容。
   
