--- a/.github/workflows/label-commenter.yml
+++ b/.github/workflows/label-commenter.yml
@@ -3,14 +3,17 @@ name: Label Commenter
 on:
   issues:
     types: [labeled, unlabeled]
+  pull_request_target:
+    types: [labeled, unlabeled]
 
 permissions:
   contents: read
   issues: write
-      
+  pull-requests: write
+
 jobs:
   comment:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Label Commenter
