--- a/.github/workflows/label-commenter.yml
+++ b/.github/workflows/label-commenter.yml
@@ -2,20 +2,16 @@ name: Label Commenter
 
 on:
   issues:
-    types: [labeled, unlabeled]
-  pull_request_target:
-    types: [labeled, unlabeled]
-
-permissions:
-  contents: read
-  issues: write
-  pull-requests: write
+    types:
+      - labeled
+      - unlabeled
 
 jobs:
   comment:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Label Commenter
         uses: peaceiris/actions-label-commenter@v1
         with:
