--- a/.github/workflows/reachability-checker.yml
+++ b/.github/workflows/reachability-checker.yml
@@ -3,7 +3,7 @@ name: Reachability Checker
 # Controls when the workflow will run
 on:
   issues:
-    # 新增（打开）/编辑/关闭/重新打开/设置标签/移除标签
+    # 新增（打开）/关闭/重新打开/设置标签/移除标签
     types: [opened, closed, reopened, labeled, unlabeled]
   # 手动触发
   workflow_dispatch:
