--- a/.github/workflows/feed-posts-parser.yml
+++ b/.github/workflows/feed-posts-parser.yml
@@ -31,7 +31,8 @@ jobs:
           data_version: 'v2'
           data_path: '/v2/data.json'
           sort: 'posts-desc' # 'created-desc'/'created-asc'/'updated-desc'/'updated-asc'
-          exclude_labels: '审核中, 缺少互动, 缺少文章, 风险网站' # 具有哪些标签的issue不生成到JSON中
+          exclude_issue_with_labels: '审核中, 缺少互动, 缺少文章, 风险网站' # 具有哪些标签的issue不生成到JSON中
+          hide_labels: '白名单' # 这些标签不显示在前端页面
       - name: Setup Git Config
         run: |
           git config --global user.name 'github-actions[bot]'
