--- a/.github/configs/label-commenter-config.yml
+++ b/.github/configs/label-commenter-config.yml
@@ -2,6 +2,16 @@
 
 labels:
   - name: '审核中'
+    labeled:
+      issue:
+        body: |
+          **感谢您的支持，接下来请完成任务或等待审核！**
+          
+          您已经完成了友链申请，由于博主设置了友链申请条件，接下来博主将会等待条件满足后完成审批。
+
+          > 如果您还未满足上述条件，可以先去 [博客](https://xaoxuu.com) 里互动互动～
+          
+  - name: '审核中'
     unlabeled:
       issue:
         body: |
@@ -35,10 +45,11 @@ labels:
 
           距离成功只剩一步之遥了，请把本站添加到您的友链中，然后再下方评论告知。
 
-  - name: '无法访问'
+  - name: '长期失联'
     labeled:
       issue:
+        action: close
         body: |
-          **⚠️ 抱歉，您的网站打不开，现已暂时下架。**
+          **⚠️ 抱歉，您的网站长期打不开，现已暂时下架。**
 
           如果您确认可以打开，请在下方评论告知，我们会在人工审核通过后恢复上架。
