--- a/.github/configs/label-commenter-config.yml
+++ b/.github/configs/label-commenter-config.yml
@@ -9,7 +9,7 @@ labels:
           
           您已经完成了友链申请，由于博主设置了友链申请条件，接下来博主将会等待条件满足后完成审批。
 
-          > 如果您还未满足上述条件，可以先去 [博客](https://xaoxuu.com) 里互动互动～
+          > 如果您还未满足互换友链的条件，可以先去 [博客](https://xaoxuu.com) 里互动互动～
           
   - name: '审核中'
     unlabeled:
