--- a/.github/ISSUE_TEMPLATE/template_friend.yaml
+++ b/.github/ISSUE_TEMPLATE/template_friend.yaml
@@ -10,6 +10,8 @@ body:
       options:
         - required: true
           label: 合法的、非营利性、无商业广告、无木马植入。
+        - required: true
+          label: 承诺不会对友链进行高频次爬取（若一次性爬取多个页面，则1天不超过1次；若仅访问feed地址，则1小时不超过1次），爬取过于频繁会被认为存在木马嫌疑。
         - required: false
           label: 有实质性原创内容的 HTTPS 站点，发布过至少 10 篇原创文章，内容题材不限。
         - required: false
