--- a/.github/ISSUE_TEMPLATE/template_friend.yaml
+++ b/.github/ISSUE_TEMPLATE/template_friend.yaml
@@ -17,7 +17,7 @@ body:
         - required: false
           label: 有独立域名，非免费域名。（在真实满足后才会通过，不满足时请不要勾选）
         - required: false
-          label: 博客已运行至少1年，非刚搭建好。（在真实满足后才会通过，不满足时请不要勾选）
+          label: 博客已持续运行至少3年。（在真实满足后才会通过，不满足时请不要勾选）
         - required: false
           label: 先友后链：与博主有至少**1年**的双向有效互动，例如互相留言评论、issue、PR等。（在真实满足后才会通过，不满足时请不要勾选）
   - type: textarea
